# scroll

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  bumbinfo.txt  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: base.md  debug.md  descriptor.md  index.md
src/scroll/base/: __init__.py  struct.py
src/scroll/debug/: __init__.py  debug.py
src/scroll/descriptor/: __init__.py  descriptor.py
tests/: test_debug.py  test_descriptor.py  test_struct.py
tests/codetest/: codetest.py
