[metadata]
name = scroll
description = scroll toolchain
long_description = file: README.md
license = LICENSE
version = '0.0.1.a0'
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
    
#install_requires = 
#    sly

python_requires = >=3.9
package_dir =
    =src

[options.packages.find]
where = src

zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
scroll = py.typed

[flake8]
max-line-length = 160

exclude = venv,.tox,.pytest_cache,.github
